--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -33,8 +33,19 @@
         </div>
 
 
+       
+        <li class="nav-item px-3">
+        <NavLink class="nav-link" href="/admin-users">
+            <span class="oi oi-people" aria-hidden="true"></span> Admin utenti
+        </NavLink>
+        </li>
+
+
     </nav>
 </div>
+
+
+
 
 @code {
     private bool collapseNavMenu = true;
