--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -35,7 +35,7 @@
 
        
         <li class="nav-item px-3">
-        <NavLink class="nav-link" href="/admin-users">
+        <NavLink class="nav-link" href="admin">
             <span class="oi oi-people" aria-hidden="true"></span> Admin utenti
         </NavLink>
         </li>
