--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BlazorApp1</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -35,7 +37,7 @@
 
        
         <li class="nav-item px-3">
-        <NavLink class="nav-link" href="admin">
+        <NavLink class="nav-link" href="admina">
             <span class="oi oi-people" aria-hidden="true"></span> Admin utenti
         </NavLink>
         </li>
