--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -37,8 +37,8 @@
 
        
         <li class="nav-item px-3">
-        <NavLink class="nav-link" href="admina">
-            <span class="oi oi-people" aria-hidden="true"></span> Admin utenti
+        <NavLink class="nav-link" href="admin">
+            <span class="oi oi-people" aria-hidden="true"></span> Admin
         </NavLink>
         </li>
 
